Add an organization settings for the number of historical days to include in metric analysis

--- a/packages/docs/pages/self-host/config.mdx
+++ b/packages/docs/pages/self-host/config.mdx
@@ -410,4 +410,7 @@ organization:
     visualEditorEnabled: true
     # Minimum experiment length (in days) when importing past experiments. Default `6`
     pastExperimentsMinLength: 3
+    # Number of days of historical data to use when analyzing metrics
+    # (must be between 1 and 400, default `90`)
+    metricAnalysisDays: 90
 ```
