--- a/packages/docs/pages/lib/js.mdx
+++ b/packages/docs/pages/lib/js.mdx
@@ -24,10 +24,18 @@ or use directly in your HTML without installing first:
 ```ts
 import { GrowthBook } from "@growthbook/growthbook";
 
-// Define the experimental context
+// Create a GrowthBook context
 const growthbook = new GrowthBook({
-  // The attributes used to assign variations
-  user: { id: "123" },
+  // Optional path to a JSON file with remote configuration data
+  configEndpoint: "https://cdn.growthbook.io/config/key_abc123",
+
+  // User attributes for targeting and variation assignment
+  attributes: {
+    id: "123",
+    isPremium: true,
+    country: "US",
+  },
+
   // Called when a user is put into an experiment
   trackingCallback: (experiment, result) => {
     analytics.track("Experiment Viewed", {
@@ -37,47 +45,269 @@ const growthbook = new GrowthBook({
   },
 });
 
-// Run an experiment
-const { value } = growthbook.run({
-  key: "my-experiment",
-  variations: ["A", "B"],
-});
+// Wait for the `configEndpoint` JSON file to load (optional)
+await growthbook.ready();
 
-console.log(value); // "A" or "B"
+// Simple boolean on/off flag
+if (growthbook.feature("my-feature").on) {
+  console.log("Feature enabled!");
+}
+
+// Multi-variate or string/JSON values
+const color = growthbook.feature("button-color").value || "blue";
 ```
 
-## GrowthBook class
+The return value of `growthbook.feature(key)` is an object with a few properties:
 
-The GrowthBook constructor takes a `Context` object. Below are all of the possible Context properties:
+- **value** - the JSON value of the feature
+- **on** - the JSON value cast to a boolean (just to make your code a little cleaner)
+- **off** - the inverse of `on` (just to make your code a little cleaner)
+- **source** - why the value was assigned to the user. One of `unknownFeature`, `defaultValue`, `force`, or `experiment`
 
-- **enabled** (`boolean`) - Switch to globally disable all experiments. Default true.
-- **user** (`{}`) - Map of user attributes that are used to assign variations
-- **groups** (`{}`) - A map of which groups the user belongs to (key is the group name, value is boolean)
-- **url** (`string`) - The URL of the current page (defaults to `window.location.href` when in a browser environment)
-- **overrides** (`{}`) - Override properties of specific experiments (used for Remote Config)
-- **forcedVariations** (`{}`) - Force specific experiments to always assign a specific variation (used for QA)
-- **qaMode** (`boolean`) - If true, random assignment is disabled and only explicitly forced variations are used.
-- **trackingCallback** (`function`) - A function that takes `experiment` and `result` as arguments.
+## Feature Definitions
 
-## Experiments
+Each feature consist of a unique key, a list of possible values, and rules for how to assign values to users. These definitions live in a single JSON object and there are two ways to load this JSON into the context.
 
-Below are all of the possible properties you can set for an Experiment:
+You can use the `configEndpoint` setting to have the SDK fetch the JSON contents from a remote URL and deal with caching. When doing this, you'll need to wait before using features. If you don't wait, no errors will be thrown, you just may get back null for all feature checks until the JSON is loaded.
 
-- **key** (`string`) - The globally unique tracking key for the experiment
-- **variations** (`any[]`) - The different variations to choose between
-- **weights** (`number[]`) - How to weight traffic between variations. Must add to 1.
-- **status** (`string`) - "running" is the default and always active. "draft" is only active during QA and development. "stopped" is only active when forcing a winning variation to 100% of users.
-- **coverage** (`number`) - What percent of users should be included in the experiment (between 0 and 1, inclusive)
-- **namespace** (`[string, number, number]`) - A more powerful version of `coverage` that lets you run mutually exclusive experiments. For example, two experiments with namespaces `["pricing", 0, 0.5]` and `["pricing", 0.5, 1]` would be mutually exclusive and each include 50% of users.
-- **url** (`RegExp`) - Users can only be included in this experiment if the current URL matches this regex
-- **include** (`() => boolean`) - A callback that returns true if the user should be part of the experiment and false if they should not be
-- **groups** (`string[]`) - Limits the experiment to specific user groups
-- **force** (`number`) - All users included in the experiment will be forced into the specific variation index
-- **hashAttribute** (`string`) - What user attribute should be used to assign variations (defaults to "id")
+```ts
+// Async/await
+await growthbook.ready();
 
-## Running Experiments
+// Callback
+growthbook.ready(() => {});
+```
 
-Run experiments by calling `growthbook.run(experiment)` which returns an object with a few useful properties:
+If you want to avoid HTTP requests and dealing with asynchronous code, you can pass the inline JSON contents directly into the context instead with the `features` setting:
+
+```js
+// Same JSON format as the configEndpoint
+const jsonValue = {...}
+const growthbook = new GrowthBook({
+  features: jsonValue,
+  ...
+})
+
+// No need for await or callbacks
+// You can use features immediately
+```
+
+If you are using the GrowthBook App to generate the features JSON, you can **stop reading now**. Everything below is for people who want to define the features JSON manually or want to understand what's going on under the hood.
+
+### Basic Feature
+
+The most basic feature just has a default value that is assigned to everyone:
+
+```js
+{
+  "my-feature": {
+    values: ["blue", "green"],
+    defaultValue: 0 // array index of values (0 = "blue")
+  }
+}
+```
+
+### Feature Rules
+
+You can override the default value with **rules**.
+
+Rules give you fine-grained control over how feature values are assigned to users. There are 2 types of feature rules: `force` and `experiment`.
+
+Each rule can also define targeting conditions that limit which users it applies to. We use the **mongrule** library for defining rules which is really simple and based on MongoDB query syntax.
+
+Here's an example targeting condition that limits a rule to firefox users in the US or Canada:
+
+```js
+{
+  browser: "firefox",
+  country: {
+    $in: ["US", "CA"]
+  }
+}
+```
+
+The first rule with matching targeting conditions will be used. That means you can chain rules together to achieve really complex use cases.
+
+#### Force Rules
+
+Force rules do what you'd expect - force everyone to get assigned a specific value. This is only really useful when combined with targeting conditions.
+
+```js
+// Paid users get "green" (index 1), everyone else gets "blue" (index 0)
+{
+  "button-color": {
+    values: ["blue", "green"],
+    rules: [
+      {
+        condition: {
+          plan: {$ne: "free"} // $ne is "not equals"
+        },
+        type: "force",
+        value: 1
+      }
+    ],
+    defaultValue: 0,
+  }
+}
+```
+
+#### Experiment Rules
+
+Experiment rules let you adjust the percent of users who get randomly assigned to each variation. This can either be used for hypothesis-driven A/B tests or to simply mitigate risk by gradually rolling out new features to your users.
+
+```js
+// Each value gets assigned to a random 33.33% of users
+{
+  "image-size": {
+    values: ["small", "medium", "large"],
+    rules: [
+      {
+        type: "experiment"
+      }
+    ]
+  }
+}
+```
+
+By default, all possible values are included in the experiment in the order they are defined. You can limit an experiment to a subset of values or change the ordering with the `variations` setting:
+
+```js
+// The first variation is "large" (2) and will get 50% of users
+// The second variation is "small" (0) and will get the other 50%
+// The value "medium" is not part of the experiment at all
+{
+  "image-size": {
+    values: ["small", "medium", "large"],
+    rules: [
+      {
+        type: "experiment",
+        variations: [2, 0]
+      }
+    ]
+  }
+}
+```
+
+You can use the `weights` setting to control what percent of users get assigned to each variation. Weights determine the traffic split between variations and must add to 1.
+
+```js
+{
+  "results-per-page": {
+    values: ["small", "medium", "large"],
+    rules: [
+      {
+        type: "experiment",
+        // 50% of users will get variation 0 ("small")
+        // 30% will get variation 1 ("medium")
+        // 20% will get variation 2 ("large")
+        weights: [0.5, 0.3, 0.2]
+      }
+    ]
+  }
+}
+```
+
+When a user is assigned a variation, we call the `trackingCallback` function so you can record the exposure with your analytics event tracking system. By default, we use the feature id to identify the experiment, but this can be overridden if needed with the `trackingKey` setting:
+
+```js
+{
+  type: "experiment",
+  trackingKey: "my-experiment"
+}
+```
+
+We use deterministic hashing to make sure the same user always gets assigned the same value. By default, we use the attribute `id`, but this can be overridden with the `hashAttribute` setting:
+
+```js
+{
+  type: "experiment",
+  hashAttribute: "device_id"
+}
+```
+
+You can use the `coverage` setting to introduce sampling and reduce the percent of users who are included in your experiment. Coverage must be between 0 and 1 and defaults to 1 (everyone included). This feature uses deterministic hashing to ensure consistent sampling.
+
+```js
+// 80% of users will be included
+// 20% will not and will fall through to the next matching rule
+{
+  type: "experiment",
+  coverage: 0.8
+}
+```
+
+Sometimes you want to run multiple conflicting experiments at the same time. You can use the `namespace` setting to run mutually exclusive experiments. We also use deterministic hashing here to ensure users don't switch experiments.
+
+```js
+// Includes users with a hash value for the "pricing" namespace of 0 to 0.6
+{
+  "feature-1": {
+    values: [false, true],
+    rules: [
+      {
+        type: "experiment",
+        namespace: ["pricing", 0, 0.6]
+      }
+    ]
+  },
+  // Includes users with a hash value for the "pricing" namespace of 0.6 to 1
+  "feature-2": {
+    values: [false, true],
+    rules: [
+      {
+        type: "experiment",
+        namespace: ["pricing", 0.6, 1]
+      }
+    ]
+  }
+}
+```
+
+### Inline Experiments
+
+Instead of declaring all features up-front in the context and referencing them by ids in your code, you can also just run an experiment directly. This is done with the `growthbook.run` method:
+
+```js
+const { value } = growthbook.run({
+  trackingKey: "my-experiment",
+  variations: ["red", "blue", "green"],
+});
+```
+
+All of the other settings (`weights`, `hashAttribute`, `coverage`, `namespace`, `condition`) are supported when using inline experiments.
+
+In addition, there are a few other settings that only really make sense for inline experiments:
+
+- `force` can be set to one of the variation array indexes. Everyone will be immediately assigned the specified value.
+- `active` can be set to false to disable the experiment and return the control for everyone
+- `include` is a callback function that returns a boolean for whether or not someone should be included in the experiment. It's a more flexible alternative to the declarative rules in `condition`
+
+### Remote Overrides for Inline Experiments
+
+The downside with this approach is that you need to deploy new code in order to make a change or stop the experiment. To get the best of both worlds, you can define experiment `overrides` on the context:
+
+```js
+const growthbook = new GrowthBook({
+  overrides: {
+    "my-experiment": {
+      status: "stopped",
+      force: 1
+    }
+  },
+  ...
+})
+
+// The inline experiment says to do a 50/50 split
+// Instead, everyone is assigned "b" because of the override
+const {value} = growthbook.run({
+  trackingKey: "my-experiment",
+  variations: ["a", "b"]
+})
+```
+
+### Experiment Return Value
+
+A call to `growthbook.run(experiment)` returns an object with a few useful properties:
 
 ```ts
 const {
@@ -87,7 +317,7 @@ const {
   hashAttribute,
   hashValue,
 } = growthbook.run({
-  key: "my-experiment",
+  trackingKey: "my-experiment",
   variations: ["A", "B"],
 });
 
@@ -109,113 +339,9 @@ console.log(hashValue); // e.g. "123"
 
 The `inExperiment` flag is only set to true if the user was randomly assigned a variation. If the user failed any targeting rules or was forced into a specific variation, this flag will be false.
 
-### Example Experiments
-
-3-way experiment with uneven variation weights:
-
-```ts
-growthbook.run({
-  key: "3-way-uneven",
-  variations: ["A", "B", "C"],
-  weights: [0.5, 0.25, 0.25],
-});
-```
-
-Slow rollout (10% of users who opted into "beta" features):
-
-```ts
-// User is in the "qa" and "beta" groups
-const growthbook = new GrowthBook({
-  user: { id: "123" },
-  groups: {
-    qa: isQATester(),
-    beta: betaFeaturesEnabled(),
-  },
-});
-
-growthbook.run({
-  key: "slow-rollout",
-  variations: ["A", "B"],
-  coverage: 0.1,
-  groups: ["beta"],
-});
-```
-
-Complex variations and custom targeting
-
-```ts
-const {value} = growthbook.run({
-  key: "complex-variations",
-  variations: [
-    {color: "blue", size: "large"},
-    {color: "green", size: "small"}
-  ],
-  url: /^\/post\/[0-9]+$/i
-  include: () => isPremium || creditsRemaining > 50
-});
-
-console.log(value.color, value.size); // blue,large OR green,small
-```
-
-Assign variations based on something other than user id
-
-```ts
-const growthbook = new GrowthBook({
-  user: {
-    id: "123",
-    company: "growthbook",
-  },
-});
-
-growthbook.run({
-  key: "by-company-id",
-  variations: ["A", "B"],
-  hashAttribute: "company",
-});
-
-// Users in the same company will always get the same variation
-```
-
-### Overriding Experiment Configuration
-
-It's common practice to adjust experiment settings after a test is live. For example, slowly ramping up traffic, stopping a test automatically if guardrail metrics go down, or rolling out a winning variation to 100% of users.
-
-For example, to roll out a winning variation to 100% of users:
-
-```ts
-const growthbook = new GrowthBook({
-  user: { id: "123" },
-  overrides: {
-    "experiment-key": {
-      status: "stopped",
-      force: 1,
-    },
-  },
-});
-
-const { value } = growthbook.run({
-  key: "experiment-key",
-  variations: ["A", "B"],
-});
-
-console.log(value); // Always "B"
-```
-
-The full list of experiment properties you can override is:
-
-- status
-- force
-- weights
-- coverage
-- namespace
-- groups
-- url (can use string instead of regex if serializing in a database)
-
-If you use the GrowthBook App (https://github.com/growthbook/growthbook) to manage experiments, there's a built-in API endpoint you can hit that returns overrides in this exact format. It's a great way to make sure your experiments are always up-to-date.
-
 ## Typescript
 
-This module exposes Typescript types if needed.
+This module exposes Typescript type declarations if needed.
 
 This is especially useful if experiments are defined as a variable before being passed into `growthbook.run`. Unions and tuples are used heavily and Typescript has trouble inferring those properly.
 
@@ -229,7 +355,7 @@ import type {
 
 // The "number" part refers to the variation type
 const exp: Experiment<number> = {
-  key: "my-test",
+  trackingKey: "my-test",
   variations: [0, 1],
   status: "stoped", // Type error! (should be "stopped")
 };
@@ -246,7 +372,7 @@ It's likely you already have some event tracking on your site with the metrics y
 For A/B tests, you just need to track one additional event - when someone views a variation.
 
 ```ts
-// Specify a tracking callback when instantiating the client
+// Specify a tracking callback when instantiating the context
 const growthbook = new GrowthBook({
   user: { id: "123" },
   trackingCallback: (experiment, result) => {
